템플릿 레이아웃 처리~

--- a/wineshare/src/main/resources/templates/home1.html
+++ b/wineshare/src/main/resources/templates/home1.html
@@ -12,7 +12,7 @@
                     <!-- Slide 1 -->
                     <li data-transition="random">
                         <!-- Main Image -->
-                        <img th:src="@{/image/mainImg.jpg}" alt="" data-bgposition="center center" data-no-retina>
+                        <img th:src="@{/image/mainImg.jpg}" alt="mainImg" data-bgposition="center center" data-no-retina>
                         <div class="overlay"></div>
 
                         <!-- Layers -->
@@ -94,7 +94,7 @@
                     <!-- Slide 2 -->
                     <li data-transition="random">
                         <!-- Main Image -->
-                        <img src="/image/mainImg3.jpg" alt="" data-bgposition="center center" data-no-retina>
+                        <img th:src="@{/image/mainImg3.jpg}" alt="" data-bgposition="center center" data-no-retina>
                         <div class="overlay"></div>
 
                         <!-- Layers -->
@@ -189,7 +189,7 @@
                             <h3 class="our-product-title"><a href="#"> Our Products </a></h3>
                             <h1 class="our-product-main"><a href="#"> Popular This Month </a></h1>
                             <div class="our-product-image">
-                                <img src="http://localhost:8022/resources/static/image/homepage14.png" alt="image">
+                                <img th:src="@{/image/homepage14.png}" alt="image">
                             </div>
                         </div> <!-- /title-section -->
                     </div> <!-- /col-lg-12 -->
@@ -224,7 +224,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img src="/image/homepage19.png" alt="image">
+                                        <img th:src="@{/image/homepage19.png}" alt="image">
                                     </a>
                                     <span class="new">Sale</span>
                                 </div>
@@ -253,7 +253,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img src="/image/homepage18.png" alt="image">
+                                        <img th:src="@{/image/homepage18.png}" alt="image">
                                     </a>
 
                                 </div>
@@ -280,7 +280,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img src="/image/homepage19.png" alt="image">
+                                        <img th:src="@{/image/homepage19.png}" alt="image">
                                     </a>
                                 </div>
                                 <div class="product-info clearfix">
@@ -326,7 +326,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img src="/image/homepage28.png" alt="image">
+                                    <img th:src="@{/image/homepage28.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -346,7 +346,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage29.png" alt="image">
+                                    <img th:src="@{/image/homepage29.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -366,7 +366,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage30.png" alt="image">
+                                    <img th:src="@{/image/homepage30.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -396,7 +396,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img src="/image/homepage31.png" alt="image">
+                                    <img th:src="@{/image/homepage31.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -416,7 +416,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage32.png" alt="image">
+                                    <img th:src="@{/image/homepage32.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -436,7 +436,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage33.png" alt="image">
+                                    <img th:src="@{/image/homepage33.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -466,7 +466,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img src="/image/homepage34.png" alt="image">
+                                    <img th:src="@{/image/homepage34.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -486,7 +486,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage35.png" alt="image">
+                                    <img th:src="@{/image/homepage35.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -506,7 +506,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img src="/image/homepage36.png" alt="image">
+                                    <img th:src="@{/image/homepage36.png}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -537,7 +537,7 @@
                             <!--                                <h3 class="our-product-title"><a href="#"> Dont't Miss Anything </a></h3>-->
                             <h1 class="our-product-main"><a href="#">프로모션</a></h1>
                             <div class="our-product-image-background">
-                                <img src="/image/test.png" alt="image">
+                                <img th:src="@{/image/test.png}" alt="image">
                             </div>
                         </div> <!-- /title-section -->
                     </div>
@@ -762,14 +762,14 @@
         <!--                                <h3 class="our-product-title"><a href="#"> Our Blog </a></h3>-->
         <!--                                <h1 class="our-product-main"><a href="#"> News Latest </a></h1>-->
         <!--                                <div class="our-product-image">-->
-        <!--                                     <img src="/main/image/homepage14.png" alt="image">-->
+        <!--                                     <img th:src="@{/main/image/homepage14.png}" alt="image">-->
         <!--                                </div>-->
         <!--                            </div> &lt;!&ndash; /title-section &ndash;&gt;-->
         <!--                      </div>-->
         <!--                      <div class="col-lg-6 col-12">-->
         <!--                          <article class="post">-->
         <!--                              <div class="featured-post">-->
-        <!--                                  <img src="/main/image/homepage44.png" alt="image">-->
+        <!--                                  <img th:src="@{/main/image/homepage44.png}" alt="image">-->
         <!--                              </div>-->
         <!--                              <div class="content-post">-->
         <!--                                  <div class="post-title">-->
