--- a/wineshare/src/main/resources/templates/fragments/footer.html
+++ b/wineshare/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="footer-widgets">
         <div class="widget widget-logo">
-          <img th:src="@{/image/logo.png}" alt="image" width="129" height="37" data-retina="image/logo-2x.png" data-width="147" data-height="21">
+          <img th:src="@{/image/logo.png}" alt="image" width="129" height="37" th:data-retina="@{/image/logo-2x.png}" data-width="147" data-height="21">
         </div> <!-- /widget-logo -->
         <div class="widget widget-icon">
           <ul>
