--- a/wineshare/src/main/resources/templates/layouts/layout1.html
+++ b/wineshare/src/main/resources/templates/layouts/layout1.html
@@ -3,9 +3,15 @@
                 xmlns:layout="http://www.ultraq.net.nz/thymeleaf.layout">
 <head>
     <meta charset="UTF-8">
-    <title>layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if IE]>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+    <meta name="author" content="themesflat.com">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>WINESHARE</title>
     <!-- Bootstrap  -->
-    <link rel="stylesheet" type="text/css" th:href="@{/stylesheerts/bootstrap.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/bootstrap.css}">
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css"  th:href="@{/stylesheets/style.css}">
     <!-- Responsive -->
@@ -18,6 +24,19 @@
     <link rel="stylesheet" type="text/css"  th:href="@{/rev-slider/css/settings.css}">
     <link rel="stylesheet" type="text/css"  th:href="@{/rev-slider/css/layers.css}">
     <link rel="stylesheet" type="text/css"  th:href="@{/rev-slider/css/navigation.css}">
+    <!-- Favicon and touch icons  -->
+    <link th:href="@{/icon/icon.png}" rel="apple-touch-icon-precomposed" sizes="48x48">
+    <link th:href="@{/icon/icon.png}" rel="apple-touch-icon-precomposed">
+    <link th:href="@{/icon/icon.png}" rel="shortcut icon">
+    <!-- 기본 js -->
+    <script type="text/javascript" th:src="@{/javascript/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/jquery.easing.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/owl.carousel.min.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/jquery-countTo.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/jquery-waypoints.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/main.js}"></script>
+
 
     <!-- 사용자 css, js 자리 -->
     <th:block layout:fragment="script"></th:block>
@@ -30,5 +49,19 @@
 
     <div th:replace="fragments/footer::footer"></div>
 
+    <!-- Slider -->
+    <script type="text/javascript" th:src="@{/rev-slider/js/jquery.themepunch.tools.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/jquery.themepunch.revolution.min.js}"></script>
+    <script type="text/javascript" th:src="@{/javascript/rev-slider.js}"></script>
+    <!-- Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading -->
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.actions.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.carousel.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.kenburn.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.layeranimation.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.migration.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.navigation.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.parallax.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.slideanims.min.js}"></script>
+    <script type="text/javascript" th:src="@{/rev-slider/js/extensions/revolution.extension.video.min.js}"></script>
 </body>
 </html>
