--- a/wineshare/src/main/resources/templates/layouts/layout1.html
+++ b/wineshare/src/main/resources/templates/layouts/layout1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>layout</title>
     <!-- Bootstrap  -->
-    <link rel="stylesheet" type="text/css" th:href="@{/stylesheerts/bootstrap.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/bootstrap.css}">
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css"  th:href="@{/stylesheets/style.css}">
     <!-- Responsive -->
