있는거 경로 수정

--- a/wineshare/src/main/resources/templates/register/register.html
+++ b/wineshare/src/main/resources/templates/register/register.html
@@ -2,7 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf.layout">
 <!-- register css Fiels -->
+<th:block layout:fragment="css">
 <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/register.css}">
+</th:block>
 
 <!--<div id="loading-overlay">-->
 <!--    <div class="loader"></div>-->
