--- a/wineshare/src/main/resources/templates/members/login.html
+++ b/wineshare/src/main/resources/templates/members/login.html
@@ -150,7 +150,7 @@
     <h1 class="header">Sign in</h1>
 
     <!-- 타임리프를 사용하여 로그인 폼 처리 -->
-    <form th:action="@{/login}" method="post" class="login-form">
+    <form th:action="@{/templates/members}" method="post" class="login-form">
         <div class="form-group">
             <label for="email">ID</label>
             <!-- 이메일 입력 필드 -->
