--- a/wineshare/src/main/resources/templates/register/register.html
+++ b/wineshare/src/main/resources/templates/register/register.html
@@ -194,7 +194,7 @@
 
     <div class="footer-text">
         <!-- 로그인 페이지로 이동 -->
-        Already have an account? <a th:href="@{/login}">Sign In</a>
+        Already have an account? <a th:href="@{/templates/members}">Sign In</a>
     </div>
 </div>
 <footer class="style3">
