--- a/wineshare/src/main/resources/static/stylesheets/style.css
+++ b/wineshare/src/main/resources/static/stylesheets/style.css
@@ -21,6 +21,12 @@
 @import url("revolution-slider.css");
 @import url("magnific-popup.css");
 @import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Marcellus|Rouge+Script|Laila:300,400,500,600,700");
+/*임시 폰트 */
+@import url('https://fonts.googleapis.com/css2?family=Diphylleia&family=Song+Myung&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Diphylleia&family=Nanum+Myeongjo:wght@400;700;800&family=Song+Myung&display=swap');
+
+
 /**
 	* Reset
 	* Repeatable Patterns
@@ -1069,7 +1075,7 @@ header.style1 input {
 
 .main-blog-right .content .content-main .submit {
 	padding-top: 10px;
-	font-family: Marcellus;
+	font-family:Marcellus;
 	font-size: 14px;
 	line-height: 48px;
 	letter-spacing: 1.3px;
@@ -1540,7 +1546,7 @@ article.post-list .content-post {
 
 footer.style1 {
 	margin-top: 100px;
-	/* background-image: url(/image/footer.jpg); */
+	background-image: url(../image/footer.jpg);
 	height: 445px;
 	max-height: 445px;
 }
@@ -3759,6 +3765,7 @@ footer.style1 .footer-widgets .widget-text span {
 .sidebar .widget .widget-title {
 	overflow: hidden;
 	position: relative;
+
 }
 
 .main-shop-right .sidebar .widget .widget-title:after {
@@ -3866,99 +3873,7 @@ footer.style1 .footer-widgets .widget-text span {
     margin-bottom: 33px;
 }
 
-.widget.widget-filter .price_slider {
-    float: left;
-    width: 300px;
-    top: 13px;
-}
 
-.widget.widget-filter .ui-slider-horizontal {
-    height: 2px;
-    background-color: #e1e1e1;
-    -webkit-border-radius: 2px;
-       -moz-border-radius: 2px;
-    	-ms-border-radius: 2px;
-    	 -o-border-radius: 2px;
-    		border-radius: 2px;
-}
-
-.widget-filter .ui-slider .ui-slider-range {
-    position: absolute;
-    top: -1px;
-    z-index: 1;
-    display: block;
-    height: 100%;
-}
-
-.widget-filter .ui-slider .ui-slider-handle {
-    height: 9px;
-    width: 9px;
-    cursor: pointer;
-    position: absolute;
-    z-index: 0;
-    top: -5px;
-    outline: 0;
-    border: unset;
-    -webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
-	-webkit-transition: none;
-	-moz-transition: none;
-	-o-transition: none;
-	-ms-transition: none;
-	transition: none;
-	background-color: #c02323;
-}
-
-.widget-filter .ui-slider .ui-slider-handle span.shadow {
-	display: none;
-}
-
-.widget-filter .ui-slider .ui-slider-handle span.shadow.dow {
-    width: 200%;
-    height: 200%;
-    display: block;
-    position: relative;
-    top: -1px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
-
-.widget-filter .price_slider_amount {
-    margin: 0;
-    margin-top: -19px;
-}
-
-.widget-filter .price_slider_amount .price_label {
-	float: right;
-    margin-top: -12px;
-}
-
-.widget-filter .price_slider_amount .price_label input {
-    font-size: 14px;
-    font-weight: 600;
-    margin-bottom: 27px;
-}
-
-.widget-filter .flat-button {
-    padding: 9px 30px 9px;
-}
-
-.widget-filter .flat-button {
-    display: inline-block;
-    background: #fff;
-    color: #c02323;
-    border: 1px solid #c02323;
-}
-
-.widget-filter .flat-button:hover {
-	background-color: #c02323;
-	color: #fff;
-}
 
 .widget-filter .ui-widget-header {
 	background-color: #c02323 ! important;
@@ -3969,30 +3884,10 @@ footer.style1 .footer-widgets .widget-text span {
 	background-color: #c02323;
 }
 
-.widget-filter span.filter {
-	float: left;
-	display: inline-block;
-	margin-top: 20px;
-}
-
-.widget-filter span.filter a {
-	padding: 0 25px;
-	color: #c02323;
-	border: 1px solid #c02323;
-	font-family: Marcellus;
-	font-size: 14px;
-	line-height: 36px;
-	display: inline-block;
-}
-
-.widget-filter span.filter a:hover {
-	color: #fff;
-}
-
-.widget-filter p.amount {
-	float: right;
-	display: inline-block;
-	margin-top: 25px;
+.widget-filter p.rating {
+    position: absolute;
+	right: 300px;
+	margin-top: 10px;
 }
 
 .main-shop-right .sidebar .widget-recent {
@@ -4096,7 +3991,7 @@ footer.style1 .footer-widgets .widget-text span {
 
 .flat-deal-of-the-week.style1 {
 	padding: 106px 0 100px 0;
-	/* background-image: url(/image/footer.jpg);*/
+	background-image: url(../image/footer.jpg);
 } 
 
 .flat-deal-week {
@@ -4893,7 +4788,7 @@ header.style2 .review a i:hover {
 
 .flat-new-latest.style2 {
 	padding: 103px 0 101px;
-	/* background-image: url(/image/footer.jpg);*/
+	background-image: url(../image/footer.jpg);
 }
 
 .flat-new-latest.style2 .featured-post {
@@ -5594,7 +5489,7 @@ body.bg-boxed {
 /* footer.style3 */
 
 footer.style3 {
-	/* background-image: url(/image/footer.jpg);*/
+	background-image: url(../image/footer.jpg);
 	height: 445px;
 	max-height: 445px;
 }
@@ -5728,7 +5623,7 @@ footer.style3 .footer-widgets .widget-text span {
 }
 
 .main-homepage-4 .slider-style4 {
-	/* background-image: url(/image/footer.jpg);*/
+	background-image: url(../image/footer.jpg);
 	padding: 87px 0 272px 0;
 }
 
@@ -7271,6 +7166,11 @@ transition: all 1s ease;
 	color: #c02323;
 }
 
+.main-shop-detail .content-wrap .heart:hover{
+    background-color: #c02323;
+    color: #eeeeee;
+}
+
 .main-shop-detail .woocommerce-tabs {
 	clear: both;
 	overflow: hidden;
@@ -7356,6 +7256,8 @@ transition: all 1s ease;
 .main-shop-detail .post-rating i:last-of-type {
 	color: #a6a6a6;
 }
+
+
 
 .main-shop-detail .post-comment {
 	overflow: hidden;
@@ -8597,7 +8499,7 @@ transition: all 1s ease;
     padding: 30px;
 }
 
-.flat-products.list .product-thumb.clearfix {
+.flat-products.list .product-thumb {
 	float: left;
 }
 
@@ -8660,7 +8562,7 @@ transition: all 1s ease;
     padding:0 0 0 5px;
 }
 
-.main-shop-right.list .product-thumb.clearfix {
+.main-shop-right.list .product-thumb{
 	float: left;
 }
 
@@ -8863,3 +8765,6 @@ transition: all 1s ease;
 .flat-divider47 {
 	height: 47px;
 }
+
+
+
