--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
   <header class="style1">
     <div id="site-header">
       <div class="container-fluid">
-                     <a href="home1.html" class="logo"><img th:src="@{/image/wineshare3.PNG}" alt="image" width="129" height="37" th:data-retina="@{/image/wineshare3.PNG}" data-width="147" data-height="21"></a>
+                     <a href="/" class="logo"><img th:src="@{/image/wineshare2.PNG}" alt="image" width="129" height="37" th:data-retina="@{/image/wineshare2.PNG}" data-width="147" data-height="21"></a>
         <div class="mobile-button">
           <span></span>
         </div>
